# haskell-path-tracer

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  package.yaml  stack-llvm-7.0.1.yaml  stack-llvm-8.0.yaml  stack.yaml  tracer.cabal
app/: Files.hs  Main.hs  TH.hs
app/assets/: fs.glsl  vs.glsl
app/shaders/: fs.glsl
src/: Debug.hs  Intersection.hs  Lib.hs  Scene.hs  TH.hs  Util.hs
src/Data/Array/Accelerate/Linear/: Projection.hs
src/Scene/: Intersection.hs  Objects.hs  Trace.hs  World.hs
test/: Spec.hs
test/Scene/Intersection/: Tests.hs
