cabal-version:        3.0
name:                 tracer
version:              1.1.0.0
synopsis:             A path tracing algorithm implemented using Accelerate.
homepage:             https://github.com/robbert-vdh/haskell-path-tracer
license:              MIT
license-file:         LICENSE

author:               Gijs van Steenpaal, Robbert van der Helm
maintainer:           mail@robbertvanderhelm.nl
copyright:            2019-2020 Gijs van Steenpaal, Robert van der Helm

description:          Please see the included README file.

extra-source-files:   README.md, CHANGELOG.md

source-repository head
    type:             git
    location:         https://github.com/robbert-vdh/haskell-path-tracer

flag Cpu
    description:      Run the application using Accelerate's CPU backend.
    manual:           True
    default:          False

common options
    ghc-options:      -Wall

library
    import:           options
    hs-source-dirs:   src
    default-language: Haskell2010

    exposed-modules:
        Data.Array.Accelerate.Linear.Projection
        Debug
        Lib
        Scene.Intersection
        Scene.Objects
        Scene.Trace
        Scene.World
        Util

    build-depends:
        base >=4.13 && <5.0,
        accelerate ^>=1.4.0.0,
        lens-accelerate ^>=0.3.0.0,
        linear-accelerate ^>=0.8.0.0,
        linear ^>=1.21.1,
        mwc-random ^>=0.14.0.0,
        mtl ^>=2.2.2,

    -- We don't need to compile the Accelerate backend we're not using. If we
    -- don't do this, you won't be able to compile the CPU version without
    -- having the CUDA toolchain installed.
    if flag(Cpu)
        build-depends: accelerate-llvm-native ^>=1.4.0.0
        cpp-options:   -DUSE_CPU_BACKEND'
    else
        build-depends: accelerate-llvm-ptx ^>=1.4.0.0

    other-extensions:
        ConstraintKinds
        CPP
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RebindableSyntax
        ScopedTypeVariables
        Strict
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        ViewPatterns

executable tracer
    import:           options
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -O2

    build-depends:
        tracer,

        base >=4.13 && <5.0,
        template-haskell ^>=2.15,
        accelerate ^>=1.4.0.0,
        accelerate-io-vector ^>=0.1.0.0,
        bytestring ^>=0.10.10.0,
        deepseq ^>=1.4.4.0,
        lens ^>=4.19.2,
        mtl ^>=2.2.2,
        optparse-applicative ^>=0.15.1.0,
        text ^>=1.2,
        vector ^>=0.12.1.2,

        -- OpenGL related packages
        GLUtil ^>=0.10.4,
        OpenGL ^>=3.0.3.0,
        sdl2 ^>=2.5.2.0,
        sdl2-ttf ^>=2.1.1,

        -- Used to create temporary file as a workaround for sdl2-ttf's decode
        -- function not working properly
        temporary ^>=1.3,

    other-modules:
        Files
        TH

    other-extensions:
        BangPatterns
        FlexibleInstances
        FunctionalDependencies
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        OverloadedStrings
        RecordWildCards
        TemplateHaskell
        TypeApplications
        TypeOperators
        ViewPatterns

test-suite tracer-test
    import:           options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-language: Haskell2010

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

    other-modules:
        Scene.Intersection.Tests

    build-depends:
        tracer,

        base >=4.13 && <5.0,
        accelerate ^>=1.4.0.0,
        hedgehog ^>=1.0.2,
        linear ^>=1.21.1,
        linear-accelerate ^>=0.8.0.0,
        tasty ^>=1.3.1,
        tasty-hedgehog ^>=1.0.0.2,
